[package]
name = "ic-logger"
version = "0.1.0"
license = "MIT"
authors = [
  "Sam Clements <sam@borntyping.co.uk>",
  "Maciej Zwoliński <mac.zwolinski@gmail.com>",
]
description = "A logger for the Internet Computer"
repository = "https://github.com/zvolin/ic-logger"
edition = "2021"
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger", "internet-computer"]

[dependencies]
ic-cdk = "0.10.0"
log = { version = "^0.4.17", features = ["std"] }

[[example]]
name = "flush"
path = "examples/flush.rs"

[[example]]
name = "init"
path = "examples/init.rs"

[[example]]
name = "init_with_level"
path = "examples/init_with_level.rs"

[[example]]
name = "init_with_target_level"
path = "examples/init_with_target_level.rs"
